--- a/Pages/content.html
+++ b/Pages/content.html
@@ -45,22 +45,22 @@
   </div>
 
   <div class="bottombox"> <!-- Hero Section -->
-    <section class="display">
+    <section class="contentInfo">
       <h1>My Content</h1>
-    <center>
-    </section class="contentInfo">
-      <ul>
-        <li>
-          <a href="https://starmadedock.net/members/starmade-lover.689109/#resources" target="_blank"> StarMade Dock Content</a>
-        </li>
-        <li>
-          <a href="https://github.com/PR0G4M3R?tab=repositories" target="_blank"> Coding Projects</a>
-        </li>
-        <li>
-          <a href="https://discord.gg/CsmPRTkxry" target="_blank"> Discord Content Channel</a>
-        </li>
-      </ul>
-  </center>
+      <center>
+        <ul>
+          <li>
+            <a href="https://starmadedock.net/members/starmade-lover.689109/#resources" target="_blank">StarMade Dock Content</a>
+          </li>
+          <li>
+            <a href="https://github.com/PR0G4M3R?tab=repositories" target="_blank">Coding Projects</a>
+          </li>
+          <li>
+            <a href="https://discord.gg/CsmPRTkxry" target="_blank">Discord Content Channel</a>
+          </li>
+        </ul>
+      </center>
+    </section>
   </div>
   </body>
 </html>
