--- a/Pages/contacts.html
+++ b/Pages/contacts.html
@@ -46,6 +46,7 @@
   </div>
 
   <div class="bottombox"> <!-- Hero Section -->
+  <h1>My Contacts</h1>
   <center>
     <section class="contactsInfo">
     
